--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,10 @@
 
 <head>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    {% if title %}
+    
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='main.css') }}">
+
+     {% if title %}
         <title>{{ title }}</title>
     {% else %}
         <title>My Blog</title>
@@ -55,7 +58,7 @@
       </main>
 
     <div class="container">
-        {% block content %} {% endblock content %}
+       
     </div>
 
 
