--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
             </div>
         </fieldset>
         <div class="form-group">
-            {{ form-submit(class='btn-outline-info') }}
+            {{ form.submit(class='btn-outline-info') }}
         </div>
     </form>
 </div>
