--- a/templates/register.html
+++ b/templates/register.html
@@ -8,19 +8,19 @@
             <legend class="border-bottom mb-4">Join Today</legend>
             <div class="form-group">
                 {{ form.username.label(class="form-control-label")}}
-                {{ form.username.label(class="form-control-label-lg")}}
+                {{ form.username.label(class="form-control form-control-file")}}
             </div>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label")}}
-                {{ form.email.label(class="form-control-label-lg")}}
+                {{ form.email.label(class="form-control form-control-lg")}}
             </div>
             <div class="form-group">
                 {{ form.password.label(class="form-control-label")}}
-                {{ form.password.label(class="form-control-label-lg")}}
+                {{ form.password.label(class="form-control form-control-lg")}}
             </div>
             <div class="form-group">
                 {{ form.confirm_password.label(class="form-control-label")}}
-                {{ form.confirm_password.label(class="form-control-label-lg")}}
+                {{ form.confirm_password.label(class="form-control form-control-lg")}}
             </div>
         </fieldset>
         <div class="form-group">
