install postgresql to create database

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Flask Blog</a>
+          <a class="navbar-brand mr-4" href="/">A Great Odyssey</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,13 +54,16 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <h3>Topics of Interest</h3>
+            <p class='text-muted'>Gravitating toward greatness
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                <li class="list-group-item list-group-item-light">Politics</li>
+                <li class="list-group-item list-group-item-light">Lifestyle</li>
+                <li class="list-group-item list-group-item-light">Computer Science</li>
+                <li class="list-group-item list-group-item-light">Economic Overview</li>
+                <li class="list-group-item list-group-item-light">Life of a warrior</li>
+                <li class="list-group-item list-group-item-light">Hope of the World</li>
               </ul>
             </p>
           </div>
