add various tests

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -57,6 +57,8 @@
             {% endif %}
           {% endwith %}
           {% block content %}{% endblock %}
+
+          <p> We can acknowledge that oppression will always be with us, and still strive for justice.  We can admit the intractability of depravation, and still strive for dignity.  Clear-eyed, we can understand that there will be war, and still strive for peace.  We can do that -- for that is the story of human progress; that's the hope of all the world; and at this moment of challenge, that must be our work here on Earth.</p>
         </div>
         
         <div class="col-md-7">
@@ -66,7 +68,7 @@
               <ul class="list-group">
                 <h4>Oliver Wendel</h4>
                 <blockquote style="text-shadow: 1px 2px grey;">It is the providence of knowledge to speak and the privilege of wisdom to listen</blockquote>
-
+                <p>“I'm inspired by the people I meet in my travels--hearing their stories, seeing the hardships they overcome, their fundamental optimism and decency. I'm inspired by the love people have for their children. And I'm inspired by my own children, how full they make my heart. They make me want to work to make the world a little bit better. And they make me want to be a better man.”</p>
               </ul>
             </p>
           </div>
